# qintopia-agent-os

./: .all-contributorsrc  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pr_agent.toml  .prettierignore  .prettierrc.json  .release-please-config.json  AGENTS.md  AGENTS.zh-CN.md  CHANGELOG.md  CLAUDE.md  CLAUDE.zh-CN.md  CONTRIBUTING.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: artifacts.yml  ci.yml  deploy-production.yml  pr-agent.yml  release-please.yml  rollback-production.yml
.husky/: pre-commit
agents/_template/: agent.yaml
agents/default/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
agents/erhua/: README.md  SOUL.md.template  agent.yaml  capabilities.md  config.template.yaml  profile.template.yaml  runtime-notes.md
agents/guanerye/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
agents/huabaosi/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
agents/silaoshi/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
agents/wenyuange/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
agents/xiaoman/: README.md  agent.yaml  capabilities.md  profile.template.yaml  runtime-notes.md
deploy/: restart-target-rules.yaml
deploy/_template/: manifest.yaml
deploy/manifests/: README.md  manifest.yaml  release-manifest.template.yaml
deploy/rollback/: README.md  manifest.yaml
deploy/runner/: README.md  activate-erhua-profile.sh  deploy-request.schema.json  deploy-result.schema.json  (+12 more)
docs/: README.md  README.zh-CN.md
registry/: README.md  agents.yaml  deploy.yaml  deprecated.yaml  mcp.yaml  runtime.yaml  skills.yaml  workflows.yaml
runtime/sidecar/: .env.example  AGENTS.md  Cargo.toml  README.md  manifest.yaml
runtime/sidecar/config/agentos/: daily-digest-dispatch-rules.json
runtime/sidecar/docs/: source-snapshot.md
runtime/sidecar/fixtures/: huabaosi_wecom_canary_payload.json  huabaosi_wecom_policy_events.json  huabaosi_wecom_shadow_events.json  xiaoman_activity_records.json
runtime/sidecar/src/: activity_lifecycle.rs  bounded_http.rs  collaboration.rs  config.rs  consumer.rs  context_mcp_server.rs  context_tools.rs  daily_digest_publisher.rs  db.rs  embedding_worker.rs  event.rs  event_signal.rs  evidence.rs  graph_projection.rs  group_message_send.rs  health.rs  huabaosi_feishu_artifact_mirror.rs  huabaosi_wecom_canary.rs  huabaosi_wecom_policy.rs  huabaosi_wecom_shadow.rs  identity_backfill.rs  identity_bootstrap.rs  image_generation.rs  knowledge.rs  main.rs  mcp_server.rs  member_profile.rs  message_search.rs  operations.rs  qiwe_image_send.rs  qiwe_image_send_state.rs  raw_archive.rs  smoke.rs  url_policy.rs  workbench.rs  xiaoman_activity.rs  xiaoman_real_activity_evidence.rs
(+524 files in other folders)
