[package]
name = "qintopia-message-sidecar"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[features]
postgres-integration-tests = []
qiwe-staging-adapter = []

[dependencies]
anyhow = "=1.0.86"
async-nats = { version = "=0.37.0", default-features = false, features = ["server_2_10", "ring"] }
base64ct = "=1.6.0"
chrono = { version = "=0.4.38", features = ["serde"] }
clap = { version = "=4.5.4", features = ["derive", "env"] }
crc = "=3.2.1"
dotenvy = "=0.15.7"
ed25519-dalek = "=2.1.1"
futures = "=0.3.30"
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png"] }
rustls = "=0.21.12"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
sha2 = "=0.10.8"
sqlx = { version = "=0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "migrate"] }
tempfile = "=3.10.1"
time = "=0.3.36"
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "=1.8.0", features = ["serde", "v4"] }
webpki-roots = "=0.25.4"
home = "=0.5.9"
idna = "=1.0.3"
idna_adapter = "=1.1.0"
indexmap = "=2.2.6"
url = "=2.5.4"
zeroize = "=1.8.1"
zstd = "=0.13.2"
