[package]
name = "qintopia-message-sidecar"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"

[features]
postgres-integration-tests = []
huabaosi-staging-adapter = []
qiwe-staging-adapter = []

[dependencies]
anyhow = "=1.0.86"
async-nats = { version = "=0.49.1", default-features = false, features = ["server_2_10", "ring", "jetstream"] }
base64ct = { version = "=1.6.0", features = ["alloc"] }
chrono = { version = "=0.4.38", features = ["serde"] }
clap = { version = "=4.5.4", features = ["derive", "env"] }
crc = "=3.2.1"
dotenvy = "=0.15.7"
ed25519-dalek = "=2.1.1"
futures = "=0.3.30"
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png"] }
md-5 = "=0.10.6"
rustls = { version = "=0.23.41", default-features = false, features = ["logging", "ring", "std", "tls12"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.8"
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid", "migrate"] }
tempfile = "=3.10.1"
time = "=0.3.49"
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "=1.8.0", features = ["serde", "v4"] }
webpki-roots = "=1.0.8"
home = "=0.5.9"
idna = "=1.0.3"
idna_adapter = "=1.1.0"
indexmap = "=2.2.6"
url = "=2.5.4"
zeroize = "=1.8.1"
zstd = "=0.13.2"
